--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 913660506,
-  "source": "https://www.federalreserve.gov/releases/h15/",
   "rate": "4.33",
-  "date": "2025-Jan-7"
+  "source": "https://www.federalreserve.gov/releases/h15/",
+  "date": "2025-Jan-9",
+  "seed": 333126577
 }
