--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
   "rate": "4.33",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "date": "2025-Jan-9",
-  "seed": 333126577
+  "seed": 978836174,
+  "date": "2025-Jan-9"
 }
