--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 209247669,
+  "date": "2025-Jan-9",
+  "seed": 1641384632,
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "rate": "4.33",
-  "date": "2025-Jan-9"
+  "rate": "4.33"
 }
