--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 855700167,
   "source": "https://www.federalreserve.gov/releases/h15/",
   "date": "2025-Jan-9",
-  "rate": "4.33"
+  "rate": "4.33",
+  "seed": 1970943264
 }
