--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "date": "2025-Jan-9",
   "rate": "4.33",
-  "seed": 1970943264
+  "seed": 782287887,
+  "date": "2025-Jan-10",
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
