--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 995759022,
+  "seed": 1711148920,
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "rate": "4.33",
-  "date": "2025-Jan-10"
+  "date": "2025-Jan-10",
+  "rate": "4.33"
 }
