--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
   "source": "https://www.federalreserve.gov/releases/h15/",
+  "date": "2025-Jan-10",
   "rate": "4.33",
-  "seed": 966536984,
-  "date": "2025-Jan-10"
+  "seed": 1798978777
 }
