--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "rate": "4.33",
-  "seed": 1928065720,
+  "seed": 1628653005,
+  "source": "https://www.federalreserve.gov/releases/h15/",
   "date": "2025-Jan-10",
-  "source": "https://www.federalreserve.gov/releases/h15/"
+  "rate": "4.33"
 }
