--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 1628653005,
-  "source": "https://www.federalreserve.gov/releases/h15/",
   "date": "2025-Jan-10",
-  "rate": "4.33"
+  "rate": "4.33",
+  "source": "https://www.federalreserve.gov/releases/h15/",
+  "seed": 868261136
 }
