--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
   "rate": "4.33",
-  "source": "https://www.federalreserve.gov/releases/h15/",
   "date": "2025-Jan-10",
-  "seed": 388884573
+  "seed": 400483977,
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
