--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "date": "2025-Jan-10",
+  "seed": 1460402671,
   "rate": "4.33",
-  "seed": 2124101891
+  "source": "https://www.federalreserve.gov/releases/h15/",
+  "date": "2025-Jan-10"
 }
