--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
   "rate": "4.33",
-  "seed": 1599495675,
+  "source": "https://www.federalreserve.gov/releases/h15/",
   "date": "2025-Jan-13",
-  "source": "https://www.federalreserve.gov/releases/h15/"
+  "seed": 881563220
 }
