--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "rate": "4.33",
+  "seed": 813235965,
   "source": "https://www.federalreserve.gov/releases/h15/",
   "date": "2025-Jan-13",
-  "seed": 881563220
+  "rate": "4.33"
 }
