--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 813235965,
-  "source": "https://www.federalreserve.gov/releases/h15/",
+  "rate": "4.33",
+  "seed": 1305897247,
   "date": "2025-Jan-13",
-  "rate": "4.33"
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
