--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
+  "seed": 1386546660,
+  "rate": "4.33",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "date": "2025-Jan-13",
-  "seed": 1518911819,
-  "rate": "4.33"
+  "date": "2025-Jan-13"
 }
