--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "rate": "4.33",
-  "date": "2025-Jan-14",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 1381136364
+  "seed": 1464817637,
+  "rate": "4.33",
+  "date": "2025-Jan-14"
 }
