--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 1464817637,
+  "date": "2025-Jan-14",
   "rate": "4.33",
-  "date": "2025-Jan-14"
+  "seed": 2017986133,
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
