--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
+  "seed": 1149222954,
   "rate": "4.33",
-  "date": "2025-Jan-14",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 383046904
+  "date": "2025-Jan-14"
 }
