--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "source": "https://www.federalreserve.gov/releases/h15/",
   "rate": "4.33",
-  "seed": 1637794770,
-  "date": "2025-Jan-14"
+  "source": "https://www.federalreserve.gov/releases/h15/",
+  "date": "2025-Jan-14",
+  "seed": 558086285
 }
