--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
+  "rate": "4.33",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "date": "2025-Jan-14",
-  "seed": 253368841,
-  "rate": "4.33"
+  "date": "2025-Jan-15",
+  "seed": 705831374
 }
