--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
   "rate": "4.33",
-  "source": "https://www.federalreserve.gov/releases/h15/",
   "date": "2025-Jan-15",
-  "seed": 705831374
+  "seed": 447281631,
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
