--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
+  "seed": 318258162,
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "date": "2025-Jan-15",
   "rate": "4.33",
-  "seed": 360230326
+  "date": "2025-Jan-15"
 }
