--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 318258162,
-  "source": "https://www.federalreserve.gov/releases/h15/",
+  "date": "2025-Jan-15",
+  "seed": 413494916,
   "rate": "4.33",
-  "date": "2025-Jan-15"
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
