--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "source": "https://www.federalreserve.gov/releases/h15/",
   "rate": "4.33",
-  "seed": 680895710,
-  "date": "2025-Jan-15"
+  "source": "https://www.federalreserve.gov/releases/h15/",
+  "date": "2025-Jan-15",
+  "seed": 1375584791
 }
