--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "rate": "4.33",
-  "source": "https://www.federalreserve.gov/releases/h15/",
   "date": "2025-Jan-15",
-  "seed": 1375584791
+  "seed": 1082556117,
+  "source": "https://www.federalreserve.gov/releases/h15/",
+  "rate": "4.33"
 }
