--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "date": "2025-Jan-15",
-  "seed": 333069208,
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "rate": "4.33"
+  "date": "2025-Jan-15",
+  "rate": "4.33",
+  "seed": 634827034
 }
