--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 113428276,
-  "date": "2025-Jan-15",
+  "rate": "4.33",
+  "date": "2025-Jan-16",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "rate": "4.33"
+  "seed": 1644644793
 }
