--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
   "rate": "4.33",
-  "date": "2025-Jan-16",
+  "seed": 379443055,
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 1644644793
+  "date": "2025-Jan-16"
 }
