--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "rate": "4.33",
-  "seed": 379443055,
+  "seed": 1918957205,
+  "date": "2025-Jan-16",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "date": "2025-Jan-16"
+  "rate": "4.33"
 }
