--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
+  "seed": 1212728390,
   "rate": "4.33",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "date": "2025-Jan-16",
-  "seed": 550535248
+  "date": "2025-Jan-16"
 }
