--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "rate": "4.33",
-  "seed": 793239303,
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "date": "2025-Jan-16"
+  "date": "2025-Jan-16",
+  "seed": 39435215,
+  "rate": "4.33"
 }
