--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "source": "https://www.federalreserve.gov/releases/h15/",
+  "seed": 376680213,
+  "rate": "4.33",
   "date": "2025-Jan-16",
-  "seed": 1607111579,
-  "rate": "4.33"
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
