--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 1730635656,
   "date": "2025-Jan-16",
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "rate": "4.33"
+  "seed": 535673161,
+  "rate": "4.33",
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
