--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "rate": "4.33",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 1197675492,
-  "date": "2025-Jan-16"
+  "rate": "4.33",
+  "date": "2025-Jan-20*",
+  "seed": 39541155
 }
