--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "date": "2025-Jan-20*",
   "rate": "4.33",
-  "seed": 1385486213
+  "date": "2025-Jan-20*",
+  "seed": 1805194726,
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
