--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "date": "2025-Jan-20*",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "rate": "4.33",
-  "seed": 2146295072
+  "date": "2025-Jan-20*",
+  "seed": 577596308,
+  "rate": "4.33"
 }
