--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "date": "2025-Jan-20*",
-  "seed": 577596308,
-  "rate": "4.33"
+  "seed": 1772786555,
+  "rate": "4.33",
+  "date": "2025-Jan-20*"
 }
