--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
+  "seed": 1584504683,
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 1772786555,
-  "rate": "4.33",
-  "date": "2025-Jan-20*"
+  "date": "2025-Jan-20*",
+  "rate": "4.33"
 }
