--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
   "rate": "4.33",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "date": "2025-Jan-20*",
-  "seed": 368792133
+  "seed": 498306342,
+  "date": "2025-Jan-20*"
 }
