--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
   "rate": "4.33",
-  "date": "2025-Jan-20*",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 1624775943
+  "seed": 116822138,
+  "date": "2025-Jan-21"
 }
