--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
+  "seed": 3544875,
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 801716619,
-  "date": "2025-Jan-21",
-  "rate": "4.33"
+  "rate": "4.33",
+  "date": "2025-Jan-21"
 }
