--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 1045180910,
   "rate": "4.33",
+  "date": "2025-Jan-21",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "date": "2025-Jan-21"
+  "seed": 1518080396
 }
