--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "rate": "4.33",
+  "seed": 1252260355,
   "date": "2025-Jan-21",
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 1518080396
+  "rate": "4.33",
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
