--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 713387357,
   "rate": "4.33",
-  "date": "2025-Jan-21"
+  "date": "2025-Jan-21",
+  "seed": 508589597
 }
