--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "rate": "4.33",
   "date": "2025-Jan-21",
-  "seed": 508589597
+  "seed": 1984250770,
+  "rate": "4.33"
 }
