--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "date": "2025-Jan-21",
   "rate": "4.33",
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 1306555672
+  "seed": 652369909,
+  "date": "2025-Jan-21",
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
