--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 1060541054,
-  "rate": "4.33",
+  "source": "https://www.federalreserve.gov/releases/h15/",
+  "seed": 1497027016,
   "date": "2025-Jan-21",
-  "source": "https://www.federalreserve.gov/releases/h15/"
+  "rate": "4.33"
 }
