--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 1497027016,
-  "date": "2025-Jan-21",
-  "rate": "4.33"
+  "date": "2025-Jan-22",
+  "rate": "4.33",
+  "seed": 867016551
 }
