--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "date": "2025-Jan-22",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "rate": "4.33",
-  "seed": 2053718208
+  "seed": 1607431899,
+  "date": "2025-Jan-22",
+  "rate": "4.33"
 }
