--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 1607431899,
+  "seed": 599722379,
+  "rate": "4.33",
   "date": "2025-Jan-22",
-  "rate": "4.33"
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
