--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "rate": "4.33",
-  "seed": 943019366,
+  "source": "https://www.federalreserve.gov/releases/h15/",
+  "seed": 1322565126,
   "date": "2025-Jan-22",
-  "source": "https://www.federalreserve.gov/releases/h15/"
+  "rate": "4.33"
 }
