--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 1322565126,
   "date": "2025-Jan-22",
-  "rate": "4.33"
+  "rate": "4.33",
+  "seed": 2113980569
 }
