--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "rate": "4.33",
   "date": "2025-Jan-22",
-  "seed": 1776003687
+  "source": "https://www.federalreserve.gov/releases/h15/",
+  "seed": 1711611553,
+  "rate": "4.33"
 }
