--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
   "date": "2025-Jan-22",
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 1711611553,
-  "rate": "4.33"
+  "rate": "4.33",
+  "seed": 893561629,
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
