--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
+  "seed": 1592998839,
+  "date": "2025-Jan-22",
   "rate": "4.33",
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 404604175,
-  "date": "2025-Jan-22"
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
