--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "date": "2025-Jan-23",
-  "seed": 1381786407,
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "rate": "4.33"
+  "seed": 1732774887,
+  "rate": "4.33",
+  "date": "2025-Jan-23"
 }
