--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 1732774887,
+  "date": "2025-Jan-23",
   "rate": "4.33",
-  "date": "2025-Jan-23"
+  "seed": 1830279430,
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
