--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "date": "2025-Jan-23",
-  "source": "https://www.federalreserve.gov/releases/h15/",
   "rate": "4.33",
-  "seed": 392658676
+  "date": "2025-Jan-23",
+  "seed": 1038805972,
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
