--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "source": "https://www.federalreserve.gov/releases/h15/",
+  "date": "2025-Jan-23",
   "rate": "4.33",
-  "seed": 1013649509,
-  "date": "2025-Jan-23"
+  "source": "https://www.federalreserve.gov/releases/h15/",
+  "seed": 800968946
 }
