--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
+  "rate": "4.33",
+  "seed": 1369258646,
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 79103847,
-  "date": "2025-Jan-23",
-  "rate": "4.33"
+  "date": "2025-Jan-23"
 }
