--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
+  "date": "2025-Jan-23",
   "rate": "4.33",
-  "seed": 1369258646,
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "date": "2025-Jan-23"
+  "seed": 1329983374
 }
