--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "date": "2025-Jan-23",
+  "date": "2025-Jan-24",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "rate": "4.33",
-  "seed": 1942086532
+  "seed": 1158782618,
+  "rate": "4.33"
 }
