--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "date": "2025-Jan-24",
+  "rate": "4.33",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 1158782618,
-  "rate": "4.33"
+  "date": "2025-Jan-24",
+  "seed": 2147471715
 }
