--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "rate": "4.33",
-  "source": "https://www.federalreserve.gov/releases/h15/",
   "date": "2025-Jan-24",
-  "seed": 2147471715
+  "seed": 778340447,
+  "source": "https://www.federalreserve.gov/releases/h15/",
+  "rate": "4.33"
 }
