--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
   "source": "https://www.federalreserve.gov/releases/h15/",
+  "rate": "4.33",
   "date": "2025-Jan-24",
-  "seed": 236832962,
-  "rate": "4.33"
+  "seed": 972551053
 }
