--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "source": "https://www.federalreserve.gov/releases/h15/",
   "rate": "4.33",
-  "date": "2025-Jan-24",
-  "seed": 972551053
+  "source": "https://www.federalreserve.gov/releases/h15/",
+  "seed": 255625375,
+  "date": "2025-Jan-24"
 }
