--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "rate": "4.33",
+  "seed": 887607107,
+  "date": "2025-Jan-24",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 255625375,
-  "date": "2025-Jan-24"
+  "rate": "4.33"
 }
