--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
   "date": "2025-Jan-24",
+  "seed": 246118339,
   "rate": "4.33",
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 1796247642
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
