--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "source": "https://www.federalreserve.gov/releases/h15/",
+  "date": "2025-Jan-27",
   "rate": "4.33",
-  "seed": 1266495253,
-  "date": "2025-Jan-24"
+  "seed": 590651318,
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
