--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "rate": "4.33",
-  "seed": 1985213462,
+  "source": "https://www.federalreserve.gov/releases/h15/",
   "date": "2025-Jan-27",
-  "source": "https://www.federalreserve.gov/releases/h15/"
+  "rate": "4.33",
+  "seed": 1449855956
 }
