--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "source": "https://www.federalreserve.gov/releases/h15/",
+  "seed": 583129721,
   "date": "2025-Jan-27",
   "rate": "4.33",
-  "seed": 1449855956
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
