--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 583129721,
-  "date": "2025-Jan-27",
+  "source": "https://www.federalreserve.gov/releases/h15/",
+  "seed": 210310756,
   "rate": "4.33",
-  "source": "https://www.federalreserve.gov/releases/h15/"
+  "date": "2025-Jan-27"
 }
