--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "rate": "4.33",
   "date": "2025-Jan-27",
-  "seed": 1528121723
+  "seed": 1395274474,
+  "rate": "4.33",
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
