--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "rate": "4.33",
   "date": "2025-Jan-27",
-  "seed": 646921836,
-  "source": "https://www.federalreserve.gov/releases/h15/"
+  "seed": 1870359305,
+  "source": "https://www.federalreserve.gov/releases/h15/",
+  "rate": "4.33"
 }
