--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 1858102025,
-  "date": "2025-Jan-27",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "rate": "4.33"
+  "date": "2025-Jan-27",
+  "rate": "4.33",
+  "seed": 143493728
 }
