--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "date": "2025-Jan-27",
   "rate": "4.33",
-  "seed": 192773700
+  "seed": 825822050,
+  "date": "2025-Jan-27",
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
