--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
   "rate": "4.33",
   "date": "2025-Jan-28",
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 1165341918
+  "seed": 2040093207,
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
