--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 1740974278,
-  "date": "2025-Jan-28",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "rate": "4.33"
+  "rate": "4.33",
+  "date": "2025-Jan-28",
+  "seed": 868274623
 }
