--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "rate": "4.33",
   "date": "2025-Jan-28",
-  "seed": 868274623
+  "rate": "4.33",
+  "seed": 201104166,
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
