--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "rate": "4.33",
+  "seed": 416506532,
+  "source": "https://www.federalreserve.gov/releases/h15/",
   "date": "2025-Jan-28",
-  "seed": 1649844905,
-  "source": "https://www.federalreserve.gov/releases/h15/"
+  "rate": "4.33"
 }
