--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 416506532,
+  "rate": "4.33",
+  "seed": 1795967605,
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "date": "2025-Jan-28",
-  "rate": "4.33"
+  "date": "2025-Jan-29"
 }
