--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 793749476,
+  "seed": 108810901,
+  "date": "2025-Jan-29",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "rate": "4.33",
-  "date": "2025-Jan-29"
+  "rate": "4.33"
 }
