--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
+  "seed": 563129079,
   "rate": "4.33",
-  "seed": 1978541239,
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "date": "2025-Jan-29"
+  "date": "2025-Jan-29",
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
