--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "date": "2025-Jan-29",
   "rate": "4.33",
-  "seed": 1027424667
+  "seed": 1572715569,
+  "date": "2025-Jan-29"
 }
