--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
+  "date": "2025-Jan-29",
+  "seed": 21117743,
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "rate": "4.33",
-  "seed": 1572715569,
-  "date": "2025-Jan-29"
+  "rate": "4.33"
 }
