--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "source": "https://www.federalreserve.gov/releases/h15/",
+  "seed": 1722573729,
+  "date": "2025-Jan-30",
   "rate": "4.33",
-  "seed": 816887450,
-  "date": "2025-Jan-30"
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
