--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
+  "seed": 641881376,
   "source": "https://www.federalreserve.gov/releases/h15/",
   "date": "2025-Jan-30",
-  "rate": "4.33",
-  "seed": 1611063466
+  "rate": "4.33"
 }
