--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "rate": "4.33",
   "date": "2025-Jan-30",
-  "seed": 37694173,
-  "source": "https://www.federalreserve.gov/releases/h15/"
+  "seed": 1659560421,
+  "source": "https://www.federalreserve.gov/releases/h15/",
+  "rate": "4.33"
 }
