--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 601065217,
+  "rate": "4.33",
   "date": "2025-Jan-30",
-  "rate": "4.33"
+  "seed": 1330237866,
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
