--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "date": "2025-Jan-30",
-  "seed": 878877120,
+  "source": "https://www.federalreserve.gov/releases/h15/",
+  "date": "2025-Jan-31",
   "rate": "4.33",
-  "source": "https://www.federalreserve.gov/releases/h15/"
+  "seed": 2049682559
 }
