--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "source": "https://www.federalreserve.gov/releases/h15/",
   "date": "2025-Jan-31",
-  "rate": "4.33",
-  "seed": 2049682559
+  "seed": 1384997973,
+  "source": "https://www.federalreserve.gov/releases/h15/",
+  "rate": "4.33"
 }
