--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
+  "seed": 739815307,
+  "rate": "4.33",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 91639295,
-  "date": "2025-Jan-31",
-  "rate": "4.33"
+  "date": "2025-Jan-31"
 }
