--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "date": "2025-Jan-31",
-  "rate": "4.33",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 1731275931
+  "date": "2025-Jan-31",
+  "seed": 1068003145,
+  "rate": "4.33"
 }
