--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 1251283329,
+  "seed": 744908809,
   "rate": "4.33",
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "date": "2025-Jan-31"
+  "date": "2025-Jan-31",
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
