--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 1088014203,
+  "rate": "4.33",
   "date": "2025-Jan-31",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "rate": "4.33"
+  "seed": 1456091490
 }
