--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "rate": "4.33",
-  "date": "2025-Jan-31",
+  "seed": 1901639401,
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 1456091490
+  "date": "2025-Jan-31",
+  "rate": "4.33"
 }
