--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 1901639401,
-  "source": "https://www.federalreserve.gov/releases/h15/",
   "date": "2025-Jan-31",
-  "rate": "4.33"
+  "rate": "4.33",
+  "seed": 1415513554,
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
