--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
   "rate": "4.33",
-  "seed": 1190912457,
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "date": "2025-Jan-31"
+  "seed": 588184958,
+  "date": "2025-Feb-3",
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
