--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "rate": "4.33",
-  "seed": 1805510469,
+  "seed": 293374998,
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "date": "2025-Feb-3"
+  "date": "2025-Feb-3",
+  "rate": "4.33"
 }
