--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 293374998,
+  "rate": "4.33",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "date": "2025-Feb-3",
-  "rate": "4.33"
+  "seed": 1939851679,
+  "date": "2025-Feb-3"
 }
