--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "rate": "4.33",
+  "date": "2025-Feb-3",
+  "seed": 149725378,
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 1939851679,
-  "date": "2025-Feb-3"
+  "rate": "4.33"
 }
