--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 1527610679,
-  "date": "2025-Feb-4",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "rate": "4.33"
+  "seed": 968048140,
+  "rate": "4.33",
+  "date": "2025-Feb-4"
 }
