--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 968048140,
-  "rate": "4.33",
-  "date": "2025-Feb-4"
+  "seed": 1920075605,
+  "date": "2025-Feb-4",
+  "rate": "4.33"
 }
