--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "source": "https://www.federalreserve.gov/releases/h15/",
+  "date": "2025-Feb-4",
   "rate": "4.33",
-  "seed": 1162380212,
-  "date": "2025-Feb-4"
+  "seed": 1416209733,
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
