--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "rate": "4.33",
   "date": "2025-Feb-4",
-  "seed": 150925421,
-  "source": "https://www.federalreserve.gov/releases/h15/"
+  "seed": 711118489,
+  "source": "https://www.federalreserve.gov/releases/h15/",
+  "rate": "4.33"
 }
