--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 365424574,
-  "rate": "4.33",
+  "source": "https://www.federalreserve.gov/releases/h15/",
   "date": "2025-Feb-4",
-  "source": "https://www.federalreserve.gov/releases/h15/"
+  "seed": 1255246172,
+  "rate": "4.33"
 }
