--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "source": "https://www.federalreserve.gov/releases/h15/",
+  "rate": "4.33",
   "date": "2025-Feb-4",
-  "seed": 1255246172,
-  "rate": "4.33"
+  "source": "https://www.federalreserve.gov/releases/h15/",
+  "seed": 717348771
 }
