--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
   "rate": "4.33",
+  "seed": 1644100387,
   "date": "2025-Feb-4",
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 717348771
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
