--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
   "rate": "4.33",
-  "seed": 1761235665,
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "date": "2025-Feb-4"
+  "seed": 651141708,
+  "date": "2025-Feb-4",
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
