--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
   "date": "2025-Feb-5",
+  "seed": 461719902,
   "rate": "4.33",
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 693278883
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
