--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "source": "https://www.federalreserve.gov/releases/h15/",
   "rate": "4.33",
+  "seed": 1253002220,
   "date": "2025-Feb-5",
-  "seed": 1827653124
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
