--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 645048426,
-  "date": "2025-Feb-5",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "rate": "4.33"
+  "rate": "4.33",
+  "seed": 662115827,
+  "date": "2025-Feb-5"
 }
