--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 338742992,
   "rate": "4.33",
-  "date": "2025-Feb-5",
-  "source": "https://www.federalreserve.gov/releases/h15/"
+  "seed": 363275663,
+  "source": "https://www.federalreserve.gov/releases/h15/",
+  "date": "2025-Feb-5"
 }
