--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
+  "date": "2025-Feb-5",
   "rate": "4.33",
-  "seed": 363275663,
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "date": "2025-Feb-5"
+  "seed": 1275557724
 }
