--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
   "date": "2025-Feb-5",
   "rate": "4.33",
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 1275557724
+  "seed": 1598411726,
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
