--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
+  "seed": 284871315,
+  "date": "2025-Feb-6",
   "rate": "4.33",
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "date": "2025-Feb-5",
-  "seed": 1621371954
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
