--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 891470485,
-  "rate": "4.33",
   "date": "2025-Feb-6",
-  "source": "https://www.federalreserve.gov/releases/h15/"
+  "source": "https://www.federalreserve.gov/releases/h15/",
+  "seed": 74452514,
+  "rate": "4.33"
 }
