--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
   "date": "2025-Feb-6",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 74452514,
-  "rate": "4.33"
+  "rate": "4.33",
+  "seed": 1642727987
 }
