--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "rate": "4.33",
   "date": "2025-Feb-6",
-  "seed": 1443749839
+  "seed": 136259732,
+  "rate": "4.33",
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
