--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
   "source": "https://www.federalreserve.gov/releases/h15/",
+  "rate": "4.33",
   "date": "2025-Feb-6",
-  "seed": 1341679932,
-  "rate": "4.33"
+  "seed": 306620038
 }
