--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "date": "2025-Feb-6",
+  "seed": 755898186,
   "rate": "4.33",
-  "seed": 1694727310
+  "source": "https://www.federalreserve.gov/releases/h15/",
+  "date": "2025-Feb-6"
 }
