--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
+  "date": "2025-Feb-6",
+  "seed": 1106761560,
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "rate": "4.33",
-  "seed": 1949177024,
-  "date": "2025-Feb-6"
+  "rate": "4.33"
 }
