--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "date": "2025-Feb-6",
-  "seed": 1106761560,
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "rate": "4.33"
+  "date": "2025-Feb-7",
+  "seed": 1546656382,
+  "rate": "4.33",
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
