--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 2027506534,
   "rate": "4.33",
-  "date": "2025-Feb-7",
-  "source": "https://www.federalreserve.gov/releases/h15/"
+  "seed": 1394741770,
+  "source": "https://www.federalreserve.gov/releases/h15/",
+  "date": "2025-Feb-7"
 }
