--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
   "rate": "4.33",
-  "seed": 1394741770,
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "date": "2025-Feb-7"
+  "seed": 133853002,
+  "date": "2025-Feb-7",
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
