--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "rate": "4.33",
-  "seed": 133853002,
+  "source": "https://www.federalreserve.gov/releases/h15/",
   "date": "2025-Feb-7",
-  "source": "https://www.federalreserve.gov/releases/h15/"
+  "seed": 1731841447,
+  "rate": "4.33"
 }
