--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "source": "https://www.federalreserve.gov/releases/h15/",
+  "rate": "4.33",
   "date": "2025-Feb-7",
-  "seed": 1731841447,
-  "rate": "4.33"
+  "seed": 1870885865,
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
