--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "date": "2025-Feb-7",
+  "source": "https://www.federalreserve.gov/releases/h15/",
   "rate": "4.33",
-  "seed": 1591114172,
-  "source": "https://www.federalreserve.gov/releases/h15/"
+  "seed": 1951461309,
+  "date": "2025-Feb-7"
 }
