--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 402936187,
-  "rate": "4.33",
+  "date": "2025-Feb-10",
+  "seed": 193534166,
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "date": "2025-Feb-7"
+  "rate": "4.33"
 }
