--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 1185907252,
   "rate": "4.33",
-  "date": "2025-Feb-10",
-  "source": "https://www.federalreserve.gov/releases/h15/"
+  "source": "https://www.federalreserve.gov/releases/h15/",
+  "seed": 1533611083,
+  "date": "2025-Feb-10"
 }
