--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 1256533261,
   "rate": "4.33",
-  "date": "2025-Feb-10"
+  "date": "2025-Feb-10",
+  "source": "https://www.federalreserve.gov/releases/h15/",
+  "seed": 1774228318
 }
