--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "rate": "4.33",
+  "seed": 699634593,
   "date": "2025-Feb-10",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 1774228318
+  "rate": "4.33"
 }
