--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
+  "rate": "4.33",
   "date": "2025-Feb-10",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 4413912,
-  "rate": "4.33"
+  "seed": 1831622083
 }
