--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "date": "2025-Feb-10",
   "rate": "4.33",
-  "seed": 972047551,
-  "source": "https://www.federalreserve.gov/releases/h15/"
+  "date": "2025-Feb-10",
+  "source": "https://www.federalreserve.gov/releases/h15/",
+  "seed": 570577763
 }
