--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
+  "rate": "4.33",
   "date": "2025-Feb-11",
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 618119176,
-  "rate": "4.33"
+  "seed": 710641582,
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
