--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
+  "source": "https://www.federalreserve.gov/releases/h15/",
+  "seed": 1860667400,
   "rate": "4.33",
-  "seed": 479703880,
-  "date": "2025-Feb-11",
-  "source": "https://www.federalreserve.gov/releases/h15/"
+  "date": "2025-Feb-11"
 }
