--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 1729861686,
+  "rate": "4.33",
   "date": "2025-Feb-11",
-  "rate": "4.33"
+  "seed": 651558880,
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
