--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "date": "2025-Feb-11",
-  "rate": "4.33",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 530885286
+  "date": "2025-Feb-11",
+  "seed": 2146784159,
+  "rate": "4.33"
 }
