--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "date": "2025-Feb-12",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 1945371925,
-  "rate": "4.33"
+  "rate": "4.33",
+  "seed": 1030295445,
+  "date": "2025-Feb-12"
 }
