--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "source": "https://www.federalreserve.gov/releases/h15/",
+  "seed": 959181844,
+  "date": "2025-Feb-12",
   "rate": "4.33",
-  "seed": 1030295445,
-  "date": "2025-Feb-12"
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
