--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "rate": "4.33",
-  "seed": 776540483,
   "date": "2025-Feb-12",
-  "source": "https://www.federalreserve.gov/releases/h15/"
+  "seed": 1352060414,
+  "source": "https://www.federalreserve.gov/releases/h15/",
+  "rate": "4.33"
 }
