--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
+  "seed": 1640147390,
   "date": "2025-Feb-12",
   "rate": "4.33",
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 838456916
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
