--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 1914547199,
+  "source": "https://www.federalreserve.gov/releases/h15/",
   "rate": "4.33",
-  "date": "2025-Feb-12",
-  "source": "https://www.federalreserve.gov/releases/h15/"
+  "seed": 1146332396,
+  "date": "2025-Feb-12"
 }
