--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "rate": "4.33",
+  "seed": 807134219,
+  "date": "2025-Feb-12",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 1495684776,
-  "date": "2025-Feb-12"
+  "rate": "4.33"
 }
