--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 1808023771,
-  "source": "https://www.federalreserve.gov/releases/h15/",
   "rate": "4.33",
-  "date": "2025-Feb-13"
+  "source": "https://www.federalreserve.gov/releases/h15/",
+  "date": "2025-Feb-13",
+  "seed": 1677622076
 }
