--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
   "rate": "4.33",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "date": "2025-Feb-13",
-  "seed": 1677622076
+  "seed": 1107673466,
+  "date": "2025-Feb-13"
 }
