--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "rate": "4.33",
+  "seed": 1464802725,
   "date": "2025-Feb-13",
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 284836225
+  "rate": "4.33",
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
