--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 1464802725,
+  "seed": 1100057746,
+  "source": "https://www.federalreserve.gov/releases/h15/",
   "date": "2025-Feb-13",
-  "rate": "4.33",
-  "source": "https://www.federalreserve.gov/releases/h15/"
+  "rate": "4.33"
 }
