--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 1100057746,
+  "seed": 879624077,
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "date": "2025-Feb-13",
-  "rate": "4.33"
+  "rate": "4.33",
+  "date": "2025-Feb-13"
 }
