--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 1316679046,
-  "source": "https://www.federalreserve.gov/releases/h15/",
+  "seed": 1066247462,
+  "rate": "4.33",
   "date": "2025-Feb-13",
-  "rate": "4.33"
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
