--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "rate": "4.33",
+  "seed": 1332010390,
   "date": "2025-Feb-13",
-  "seed": 499023205
+  "rate": "4.33",
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
