--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 1332010390,
-  "date": "2025-Feb-13",
   "rate": "4.33",
-  "source": "https://www.federalreserve.gov/releases/h15/"
+  "seed": 1929768776,
+  "source": "https://www.federalreserve.gov/releases/h15/",
+  "date": "2025-Feb-13"
 }
