--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
+  "date": "2025-Feb-13",
   "rate": "4.33",
-  "seed": 1929768776,
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "date": "2025-Feb-13"
+  "seed": 1865067251
 }
