--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
+  "source": "https://www.federalreserve.gov/releases/h15/",
   "date": "2025-Feb-13",
-  "rate": "4.33",
-  "seed": 2833716,
-  "source": "https://www.federalreserve.gov/releases/h15/"
+  "seed": 1562520817,
+  "rate": "4.33"
 }
