--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
+  "seed": 1598923000,
+  "rate": "4.33",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "date": "2025-Feb-13",
-  "seed": 1562520817,
-  "rate": "4.33"
+  "date": "2025-Feb-13"
 }
