--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 941155297,
-  "source": "https://www.federalreserve.gov/releases/h15/",
+  "seed": 1068005914,
+  "rate": "4.33",
   "date": "2025-Feb-13",
-  "rate": "4.33"
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
