--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 1068005914,
+  "date": "2025-Feb-17*",
+  "source": "https://www.federalreserve.gov/releases/h15/",
   "rate": "4.33",
-  "date": "2025-Feb-13",
-  "source": "https://www.federalreserve.gov/releases/h15/"
+  "seed": 1001221322
 }
