--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "date": "2025-Feb-17*",
   "source": "https://www.federalreserve.gov/releases/h15/",
+  "seed": 660110545,
   "rate": "4.33",
-  "seed": 1001221322
+  "date": "2025-Feb-17*"
 }
