--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 660110545,
+  "seed": 1305542610,
   "rate": "4.33",
-  "date": "2025-Feb-17*"
+  "date": "2025-Feb-17*",
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
