--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "rate": "4.33",
-  "date": "2025-Feb-17*",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 1923581590
+  "seed": 1166279864,
+  "rate": "4.33",
+  "date": "2025-Feb-17*"
 }
