--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
   "rate": "4.33",
+  "source": "https://www.federalreserve.gov/releases/h15/",
   "date": "2025-Feb-17*",
-  "seed": 475569859,
-  "source": "https://www.federalreserve.gov/releases/h15/"
+  "seed": 693862802
 }
