--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 1716686499,
-  "rate": "4.33",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "date": "2025-Feb-17*"
+  "date": "2025-Feb-17*",
+  "rate": "4.33",
+  "seed": 749737571
 }
