--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 813599334,
+  "source": "https://www.federalreserve.gov/releases/h15/",
+  "seed": 483001714,
   "rate": "4.33",
-  "date": "2025-Feb-17*",
-  "source": "https://www.federalreserve.gov/releases/h15/"
+  "date": "2025-Feb-17*"
 }
