--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
+  "date": "2025-Feb-18",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 483001714,
   "rate": "4.33",
-  "date": "2025-Feb-17*"
+  "seed": 162329025
 }
