--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "date": "2025-Feb-18",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "rate": "4.33",
-  "seed": 162329025
+  "seed": 1831913179,
+  "date": "2025-Feb-18",
+  "rate": "4.33"
 }
