--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 1831913179,
+  "rate": "4.33",
   "date": "2025-Feb-18",
-  "rate": "4.33"
+  "seed": 284580523
 }
