--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 1034339451,
+  "date": "2025-Feb-18",
+  "seed": 1672483941,
   "rate": "4.33",
-  "date": "2025-Feb-18"
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
