--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 547129032,
-  "rate": "4.33",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "date": "2025-Feb-18"
+  "date": "2025-Feb-18",
+  "rate": "4.33",
+  "seed": 2025056544
 }
