--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "date": "2025-Feb-18",
   "rate": "4.33",
-  "seed": 2025056544
+  "seed": 1341847141,
+  "source": "https://www.federalreserve.gov/releases/h15/",
+  "date": "2025-Feb-18"
 }
