--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
+  "date": "2025-Feb-19",
   "rate": "4.33",
-  "seed": 774263241,
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "date": "2025-Feb-19"
+  "seed": 1340060781
 }
