--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
   "date": "2025-Feb-19",
   "rate": "4.33",
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 1340060781
+  "seed": 317083711,
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
