--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
+  "rate": "4.33",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "date": "2025-Feb-21",
-  "seed": 704293593,
-  "rate": "4.33"
+  "seed": 1031952708,
+  "date": "2025-Feb-21"
 }
