--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
   "rate": "4.33",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 1100043340,
-  "date": "2025-Feb-21"
+  "date": "2025-Feb-21",
+  "seed": 2048997886
 }
