--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "source": "https://www.federalreserve.gov/releases/h15/",
+  "date": "2025-Feb-21",
   "rate": "4.33",
-  "seed": 1299927216,
-  "date": "2025-Feb-21"
+  "seed": 901292961,
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
