--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "date": "2025-Feb-24",
+  "seed": 730987373,
   "rate": "4.33",
-  "seed": 1335926356
+  "date": "2025-Feb-24"
 }
