--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
   "rate": "4.33",
   "date": "2025-Feb-24",
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 402121143
+  "seed": 1817824368,
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
