--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
   "date": "2025-Feb-25",
-  "seed": 1948436680,
-  "rate": "4.33",
-  "source": "https://www.federalreserve.gov/releases/h15/"
+  "seed": 603613620,
+  "source": "https://www.federalreserve.gov/releases/h15/",
+  "rate": "4.33"
 }
