--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 100716827,
-  "rate": "4.33",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "date": "2025-Feb-25"
+  "seed": 515821580,
+  "date": "2025-Feb-25",
+  "rate": "4.33"
 }
