--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "rate": "4.33",
-  "seed": 1759002214,
+  "date": "2025-Feb-26",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "date": "2025-Feb-25"
+  "seed": 1150652240,
+  "rate": "4.33"
 }
