--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
   "source": "https://www.federalreserve.gov/releases/h15/",
+  "date": "2025-Feb-26",
   "rate": "4.33",
-  "seed": 251380728,
-  "date": "2025-Feb-26"
+  "seed": 213411218
 }
