--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 961740052,
-  "source": "https://www.federalreserve.gov/releases/h15/",
+  "date": "2025-Feb-26",
+  "seed": 285000728,
   "rate": "4.33",
-  "date": "2025-Feb-26"
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
