--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "rate": "4.33",
+  "seed": 262509259,
   "date": "2025-Feb-27",
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 67648339
+  "rate": "4.33",
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
