--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
+  "seed": 1664391938,
+  "rate": "4.33",
   "date": "2025-Feb-27",
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 1769703263,
-  "rate": "4.33"
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
