--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "date": "2025-Feb-28",
-  "seed": 562217752,
   "rate": "4.33",
-  "source": "https://www.federalreserve.gov/releases/h15/"
+  "seed": 1669240502,
+  "source": "https://www.federalreserve.gov/releases/h15/",
+  "date": "2025-Feb-28"
 }
