--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "date": "2025-Feb-28",
+  "seed": 1157720585,
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "rate": "4.33",
-  "seed": 1894928324
+  "date": "2025-Feb-28",
+  "rate": "4.33"
 }
