--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
   "date": "2025-Feb-28",
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 1029220129,
-  "rate": "4.33"
+  "seed": 853303770,
+  "rate": "4.33",
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
