--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 1115570397,
+  "source": "https://www.federalreserve.gov/releases/h15/",
+  "seed": 1984972266,
   "rate": "4.33",
-  "date": "2025-Feb-28",
-  "source": "https://www.federalreserve.gov/releases/h15/"
+  "date": "2025-Feb-28"
 }
