--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "rate": "4.33",
+  "date": "2025-Mar-3",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 1333148854,
-  "date": "2025-Mar-3"
+  "seed": 643234971,
+  "rate": "4.33"
 }
