--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 1057136916,
-  "rate": "4.33",
+  "source": "https://www.federalreserve.gov/releases/h15/",
+  "seed": 907137930,
   "date": "2025-Mar-3",
-  "source": "https://www.federalreserve.gov/releases/h15/"
+  "rate": "4.33"
 }
