--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 1816390260,
+  "source": "https://www.federalreserve.gov/releases/h15/",
   "date": "2025-Mar-3",
   "rate": "4.33",
-  "source": "https://www.federalreserve.gov/releases/h15/"
+  "seed": 598856037
 }
